# umbrella_maya_plugin

./: .gitignore  CARGO_BUILD_GUIDE.md  CI_BUILD_GUIDE.md  CMakeLists.txt  Cargo.toml  PROJECT_DESCRIPTION.md  README.md  UmbrellaMayaPlugin.cpp  build.rs  build_complete_plugin.bat  cbindgen.toml  demo_maya_integration.py  maya-devkit-config.toml  test_complete_plugin.mel  test_maya_plugin.py  test_threat_detection.py
.cargo/: config.toml
.github/workflows/: build-maya-plugin-minimal.yml  build-maya-plugin.yml  build-python-plugin.yml  build-with-cargo-maya-build.yml  build-with-devkit.yml
cmake/: FindMaya.cmake  linux_plugin.map
src/: error.rs  lib.rs
src/antivirus/: cleaner.rs  detector.rs  mod.rs  scanner.rs
src/commands/: mod.rs
src/ffi/: c_api.rs  mod.rs  raw.rs  safe.rs  types.rs
src/wrapper/: command.rs  mod.rs  plugin.rs
tests/: build_script_test.rs
tests/data/: userSetup.py
tests/virus/: 2024-4-30.ma  uifiguration.ma
